--- a/TODO.txt
+++ b/TODO.txt
@@ -1,13 +1,9 @@
-* Key bindings and focus on line-based editing
-	* more readline-like keybindings
-	* terminal-global editing history?
+* Terminal-global editing history?
 * Support for **some** ANSI escape sequences
 	* Colors
 	* Bracketed paste mode
 * Pager replacement
 	* Plan 9 inspired scrolling support (autoscroll, …)
 	* Dialog to find text in current buffer
-* Forward some special tty bindings (such as Ctrl+Z) to the PTY
-  instead of intercepting them in Gtk (vte has code for that)
 * Basic support for raw mode
 * 9term-like file name completions using ctrl+f
